--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,6 @@ spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-mopapi.origin-permitida=https://bacamoney-angular.heroku.com
+mopapi.origin-permitida=https://mop-angular.heroku.com
 
 spring.profiles.active=basic-security
