--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:postgresql://localhost:5432/MOPapi
-spring.datasource.username=postgres
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost/MOPapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=Thecure81
 server.port=8081
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:postgresql://localhost:5432/MOPapi
+#spring.datasource.username=postgres
+#spring.datasource.password=Thecure81
+#server.port=8081
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
