--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #CONFIGURAÇÃO LOCALHOST
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/MOPapi?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=Thecure81
+spring.datasource.url=jdbc:mysql://mopapi.mysql.uhserver.com/mopapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=carlosmeloti
+spring.datasource.password=Thecure81@!.
 server.port=8081
 spring.jpa.show-sql=true
